<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LifeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDarkIndigo"
        android:singleLine="false"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorBackgroundIndigo"
        android:textIsSelectable="false"
        android:textSize="18sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:contentDescription="@string/str_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006"
        app:srcCompat="@mipmap/ic_launcher_h" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/app_autor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <EditText
        android:id="@+id/et_weight"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_marginTop="105dp"
        android:autofillHints=""
        android:background="@color/colorPrimaryLightIndigo"
        android:ems="10"
        android:hint="@string/str_weight"
        android:inputType="numberDecimal"
        android:paddingStart="18dp"
        android:paddingEnd="0dp"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <EditText
        android:id="@+id/et_step"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_marginTop="56dp"
        android:autofillHints=""
        android:background="@color/colorPrimaryLightIndigo"
        android:ems="10"
        android:hint="@string/str_step_count"
        android:inputType="number"
        android:paddingStart="18dp"
        android:paddingEnd="0dp"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_weight" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimaryDarkIndigo"
        android:text="@string/str_save"
        android:textAllCaps="false"
        android:textColor="@color/colorBackgroundIndigo"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_step" />

    <Button
        android:id="@+id/btn_health"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="@color/colorSecondaryDarkLime"
        android:text="@string/str_btn_heals_page"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_save"
        app:layout_constraintVertical_bias="0.175" />

    <Button
        android:id="@+id/btn_person"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:background="@color/colorSecondaryDarkLime"
        android:text="@string/str_btn_person_page"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_health"
        app:layout_constraintTop_toBottomOf="@+id/btn_save"
        app:layout_constraintVertical_bias="0.175" />




</androidx.constraintlayout.widget.ConstraintLayout>